rules/dangling-gateway-backend/test/success_default_kind/input/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-kind-route
  namespace: default
spec:
  rules:
  - backendRefs:
    - name: web-service
      port: 8080
