rules/dangling-gateway-backend/test/success_default_kind/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
spec:
  ports:
  - port: 8080
